--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -5,7 +5,7 @@
 .home-jumbo {
     width: 100%;
     overflow: hidden;
-    height: 70vh;
+    height: 642px;
     display: flex;
     justify-content: center;
     align-items: center;
