Added locations to the visit page - Made changes to the redux store for pages to allow for less error-prone state-changes and less fetches when possible

--- a/src/pages/locations/Locations.css
+++ b/src/pages/locations/Locations.css
@@ -139,3 +139,17 @@ p.time-day {
 .time-change .stack-item {
     max-width: 95%;
 }
+
+.location-preview {
+    width: 150px;
+    position: absolute;
+    z-index: 100;
+    background: #FF5D73;
+    transform: rotate(-45deg);
+    top: 30px;
+    left: -30px;
+    padding: 4px 0;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+}
