--- a/src/layout/header/Header.css
+++ b/src/layout/header/Header.css
@@ -33,9 +33,9 @@ header {
 }
 
 .notification-bar p {
-    margin: 8px 0;
+    margin: 18px 0;
     text-align: center;
-    font-size: 12px;
+    font-size: 16px;
 }
 
 .notification-bar a {
@@ -53,12 +53,12 @@ header {
 }
 
 .notification-close {
-    width: 12px;
-    height: 12px;
+    width: 16px;
+    height: 16px;
     display: block;
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 12px;
+    right: 12px;
     margin-right: 8px;
     cursor: pointer;
 }
